--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,6 @@
-$bodyColor: orange;
-
-body {
-  color: $bodyColor;
-}
+// .modal-container {
+//   position: relative;
+// }
+// .modal-container .modal, .modal-container .modal-backdrop {
+//   position: absolute;
+// }
