--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -25,9 +25,10 @@
       line-height: .9;
       width: 33%;
       height: 33%;
-      border:1px solid #e7e5e1
+      border:1px solid #e7e5e1;
       // padding: 0;
       // overflow:auto;
+      cursor: pointer;
     }
 
   }
