--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,23 +8,21 @@
 
 .grid {
   list-style: none;
-  // width: 100%;
-  // height: 100%;
+  width: 100%;
+  height: 100%;
   display: table;
-
-    .grid-row {
+  .grid-row {
       display: table-row;
-      // height: 33%;
     }
 
     .grid-square {
       display: table-cell;
-      vertical-align: middle;
-      text-align: center;
-      font-size: 5rem;
-      line-height: .9;
-      width: 33%;
-      height: 33%;
+      // vertical-align: middle;
+      // text-align: center;
+      // font-size: 5rem;
+      // line-height: .9;
+      width: 5em;
+      height: 5em;
       border:1px solid #e7e5e1;
       // padding: 0;
       // overflow:auto;
