--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,29 +8,28 @@
 
 .grid {
   list-style: none;
-  width: 100%;
-  height: 100%;
+  padding-left: 0;
   display: table;
+
   .grid-row {
       display: table-row;
     }
 
-    .grid-square {
-      display: table-cell;
-      // vertical-align: middle;
-      // text-align: center;
-      // font-size: 5rem;
-      // line-height: .9;
-      width: 5em;
-      height: 5em;
-      border:1px solid #e7e5e1;
-      // padding: 0;
-      // overflow:auto;
-      cursor: pointer;
-    }
-
+   .grid-square {
+     display: table-cell;
+     width: 5em;
+     height: 5em;
+     border:1px solid #e7e5e1;
+     cursor: pointer;
+   }
   }
 
+  // vertical-align: middle;
+ // text-align: center;
+ // font-size: 5rem;
+ // line-height: .9;
+ // padding: 0;
+ // overflow:auto;
   // .empty-square {
   //   cursor: pointer;
   //   &:hover {
