display player mark on click

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,7 +5,11 @@
 //   position: absolute;
 // }
 
-
+.test {
+  width: 100%;
+  height: 5em;
+  background-color: gray;
+}
 .grid {
   list-style: none;
   padding-left: 0;
